syslog-summary (1.15) UNRELEASED

  * Fix Makefile so that it creates the needed directories before
    actually trying to install anything in them.
  * Don't hardcode python2.5 in the source

 -- David Paleino <d.paleino@gmail.com>  #DATE#

syslog-summary (1.14)

  * Added ability to read gzip compressed files, using python-magic or, if
    unavailable, os.path.splitext as fallback.
  * Added this ChangeLog file to track changes made to the sourcecode.
  * Moved regexp matching (ignore rules) earlier in the code (i.e. right
    after reading the line).
  * Using hashlib (Python 2.5) instead of the deprecated md5 module
  * printable_md5() removed: using hexdigest() method of the hashlib object.
  * Using SHA-1 instead of MD5 now.
  * Added rule to make a tarball to release :)
  * Code moved to GitHub, project management to Launchpad.

 -- David Paleino <d.paleino@gmail.com>  Thu, 17 Sep 2009 12:18:28 +0200