@@ -1,0 +1,7 @@
+#
+# Use this file to define additinal regular expressions for date patterns.
+#
+# Patterns should match only on beginning of a line, i.e. regular
+# expressions should start with caret (^).
+#
+#^[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]T[0-9][0-9]:[0-9][0-9]:[0-9][0-9][ ]
